<resources>
    <string name="app_name">Easymeal</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="acerca">Acerca de Nosotros</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="salir">Salir</string>
    <string name="registro">Registro de Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidoP">Apellido Paterno</string>
    <string name="apellidoM">Apellido Materno</string>
    <string name="edad">Edad</string>
    <string name="dia1">Dia 1</string>
    <string name="dia2">Dia 2</string>
    <string name="dia3">Dia 3</string>
    <string name="dia4">Dia 4</string>
    <string name="menusemanal">Menu Semanal</string>
    <string name="inicio">Inicio</string>
    <string name="recetas">Recetas</string>
    <string name="em">Easy Meal</string>
    <string name="ar">Administrar Recetas</string>
    <string name="tipo">Tipo</string>
    <string name="nombrereceta">Nombre de la receta</string>
    <string name="pasos">Pasos</string>
    <string name="agregar">Agregar</string>
    <string name="borrar">Borrar</string>
    <string name="editar">Editar</string>
    <string name="buscar">Buscar</string>
    <string name="agregarlista">+ Agregar</string>
    <string name="generarlista">Imprimir Lista</string>
    <string name="descripcion">Descripcion</string>
    <string name="cantidad">Cantidad</string>
    <string name="alacena">Alacena</string>
    <string name="horario">Horario</string>
    <string name="agregarDescripcion">Nueva Descripcion</string>
    <string name="agregarMedida">Nueva Medida</string>
    <string name="agregarcantidad">Cantidad</string>
    <string name="marca">Marca</string>
    <string name="medida">Unidad</string>
    <string name="unidad">Unidad de Medida</string>
    <string name="agregarmarca">Nueva Marca</string>
    <string name="add">+</string>
    <string name="caducidad">Fecha Caducidad</string>
    <string name="estadisticas">estás son sus estádisticas de ahorro</string>
    <string name="gasto">GASTO</string>
    <string name="fecha">FECHA</string>
    <string name="fecha_de_compra">Fecha de Compra</string>
    <string name="captura_importe">Captura Importe</string>
    <string name="modificar">Modificar</string>
    <string name="importe">Importe</string>
    <string name="formatofecha">--/--/----</string>
    <string name="lista_del_mandado">Lista del mandado</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="fechaUsuario">--/--/--</string>
    <string name="vacio">0.00</string>
    <string name="editar_cuenta">EDITAR CUENTA</string>
    <string name="regresar">REGRESAR</string>
    <string name="ingredientes">INGREDIENTES</string>
    <string name="ingrediente">Ingrediente</string>
    <string name="modifica">Modificar</string>
    <string name="cantida">Cantidad</string>
    <string name="eliminar_ingrediente_de_la_receta">Eliminar ingrediente de la receta</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="ver_datos">VER DATOS</string>
    <string name="datos_del_usuario">DATOS DEL USUARIO</string>
    <string name="recet">RECETAS</string>
    <string name="nombre_para_receta">Nombre para receta</string>
    <string name="ingredient">Ingredientes</string>
    <string name="agregar_ingrediente">Agregar Ingrediente</string>
    <string name="nuevo_ingrediente">Nuevo Ingrediente</string>
    <string name="ver_ingredientes_de_la_receta">Ver ingredientes de la receta</string>
    <string name="horario_semanal">HORARIO SEMANAL</string>
    <string name="dia">DIA</string>
    <string name="almuerzo">ALMUERZO</string>
    <string name="comida">COMIDA</string>
    <string name="cena">CENA</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>
    <string name="a_g_r_e_g_a_r">A G R E G A R</string>
    <string name="m_o_d_i_f_i_c_a_r">M O D I F I C A R</string>
    <string name="finalizar">FINALIZAR COMPRA</string>
    <string name="horarioSemana">Horario Semanal</string>
    <string name="prueba_gratuita">PLAN GRATUITO</string>
    <string name="obtenerGratis">Plan Actual</string>
    <string name="plan_premium">PLAN PREMIUM</string>
    <string name="obtenerMensual">Mensual $10</string>
    <string name="obtenerAnual">Anual $100</string>
    <string name="vida_saludable">Vida Saludable</string>
    <string name="pro">Pro</string>
    <string name="vistaprevia">- Control de inventario de ingredientes \n\n- Control de sus Recetas \n\n- Generación de una lista de mandado \n\n- Generación de un Horario Semanal de comidas</string>
    <string name="vista_premium">- Control de inventario de ingredientes \n\n- Control de sus Recetas \n\n- Generación de una lista de mandado \n\n- Generación de un Horario Semanal de comidas \n\n- Asesoría personalizada por parte de uno de nuestros nutriólogos \n\n- Creación de un Horario Nutricional (Modifica el del usuario)</string>
    <string name="formas_de_pago">FORMAS DE PAGO</string>
</resources>