<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IngRec">

    <TextView
        android:id="@+id/tvIng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/ingredientes" />

    <ListView
        android:id="@+id/listIngredientes"
        android:layout_width="match_parent"
        android:layout_height="320dp"/>
    <Space
        android:layout_width="10dp"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/txtNombreIng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrediente"
        android:enabled="false"
        android:inputType="text"
        tools:ignore="Autofill,SpeakableTextPresentCheck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <Button
            android:id="@+id/btnModificaIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:enabled="false"
            android:text="@string/modifica"
            tools:ignore="TouchTargetSizeCheck" />
        <EditText
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cantida"
            android:inputType="number"
            tools:ignore="Autofill,SpeakableTextPresentCheck" />


    </LinearLayout>
    <Button
        android:id="@+id/btnEliminarIng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:enabled="false"
        android:text="@string/eliminar_ingrediente_de_la_receta"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>