<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_listamandado"
    android:background="@drawable/fondo"
    tools:context=".ListaMandado">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar">
        </include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/agregarlista"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                android:text="@string/agregarlista"
                tools:ignore="TouchTargetSizeCheck">
            </Button>

            <TableLayout
                android:id="@+id/tling"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="80dp">

                <TableRow tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="35dp"
                        android:layout_height="match_parent">

                    </TextView>

                    <TextView
                        android:id="@+id/tvTitulo"
                        android:layout_weight="4"
                        android:padding="3dp"
                        android:text="@string/lista_del_mandado"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:textAlignment="center"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:textAlignment="center"
                        tools:ignore="ContentDescription" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardarMandado"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:onClick="ClickCompras"
                    android:text="@string/finalizar"
                    tools:ignore="TouchTargetSizeCheck">

                </Button>

                <Button
                    android:id="@+id/btnGenerar"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:onClick="ClickGenerar"
                    android:text="@string/generarlista"
                    tools:ignore="TouchTargetSizeCheck">

                </Button>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include layout="@layout/main_nav_drawer">

        </include>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>